--- a/0815/custom.css
+++ b/0815/custom.css
@@ -2,5 +2,74 @@
 * @Author: Quinn
 * @Date:   2015-08-15 11:33:11
 * @Last Modified by:   Quinn
-* @Last Modified time: 2015-08-15 11:44:14
+* @Last Modified time: 2015-08-15 16:32:20
 */
+* {
+    margin:0px;
+    padding: 0px;
+    box-sizing: border-box;
+    list-style: none;
+}
+.cn-wrapper {
+    width: 400px;
+    height: 400px;
+    border:1px solid #7c5089;
+    position: fixed;
+    bottom: 0px;
+    left: 50%;
+    margin-left: -200px;
+    border-radius: 50%;
+    overflow: hidden;
+    bottom: -13em;
+}
+.cn-wrapper:after {
+    content: "";
+    display: block;
+    height:8px;
+    width:8px;
+    background-color: maroon;
+    position:absolute;
+    top: 50%;
+    left: 50%;
+    margin-left: -4px;
+    margin-top: -4px;
+    border-radius: 50%;
+    z-index: 11;
+}
+.cn-wrapper li {
+    position: absolute;
+    font-size: 1.5em;
+    width: 10em;
+    height: 10em;
+    overflow: hidden;
+    transform-origin: 100% 100%;
+    background-color: #eee;
+    border: 1px solid #ddd;
+    transition: all 1s ease;
+    color: #aaa;
+    left: -1.65em;
+    top: -1.65em;
+}
+.cn-wrapper li a {
+    display:block;
+    font-size: 1.2em;
+    height: 13.5em;
+    width:13.5em;
+    position: absolute;
+    bottom: -6.75em;
+    right: -6.75em;
+    text-decoration: none;
+    color: white;
+    transition: background-color .3s ease,
+                transform .8s ease;
+    background-color: #7c5089;
+
+    transform: skew(-50deg) rotate(-70deg);
+    border-radius: 50%;
+    text-align: center;
+    padding-top: 2em;
+}
+.cn-wrapper li a span {
+    font-size: 1.3em;
+    margin-left: 0.1em;
+}
