--- a/0820/css/sidebar.css
+++ b/0820/css/sidebar.css
@@ -1,8 +1,3 @@
-a {
-	color: #222;
-	text-decoration: none;
-	font-family: 'microsoft yahei';
-}
 .menu {
 	position: fixed;
 	width: 25%;
@@ -10,13 +5,13 @@ a {
 	bottom: 3em;
 	left: 0;
 	z-index: 100;
-	overflow: hidden;
+
 }
 .main {
 	width: 75%;
 	float: right;
 }
-.menu__inner {
+.menu_inner {
 	width: calc(100% + 25px);
 	overflow-y: auto;
 	height: 100%;
