modified some files.

--- a/0827/css/style.css
+++ b/0827/css/style.css
@@ -264,14 +264,13 @@ a:focus {
 .kechengbiao .wrap-con .kb-tbody li {
   float: left;
   width: 100px;
+  height: 48px;
+  line-height: 24px;
   text-align: left;
   border-left: 1px solid #f1f1f1;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  display: -webkit-box;
-  -webkit-line-clamp: 2;
-  -webkit-box-orient: vertical;
   padding: 5px;
+  white-space: normal;
+  overflow: hidden;
   font-size: 12px;
 }
 .kechengbiao .wrap-con .kb-tbody li.kb-tbody-first {
