--- a/1013/css/style.scss
+++ b/1013/css/style.scss
@@ -29,6 +29,15 @@
 .container {
     width: 1190px !important;
 }
+#logo {
+    float: left;
+    width: 350px;
+    height: 100px;
+}
+#search {
+    margin-left: 80px;
+    
+}
 
 //head_inner
 #head_inner {
