--- a/1013/css/_variables.scss
+++ b/1013/css/_variables.scss
@@ -1,26 +1,30 @@
 //常用变量
 
 //color
-$colorBlack:#000;//黑色
 $colorRed:#db3900;//红色
-$colorGray1:#d6d6d6;//灰色-低
-$colorGray2:#adadad;//灰色-中
-$colorGray3:#f5f7f6;//灰色-最低
-$colorGray4:#efefef;//灰色-最低
+$colorBlack:#000000;//黑色
+$colorGray1:#efefef;//浅灰色
+$colorGray2:#898989;//深灰色
 
 //font-size
 $fz12:12px;
 $fz14:14px;
 $fz16:16px;
+$fz18:18px;
 $fz40:40px;
 
 //line-height
-$lineHeight24:24px;
-$lineHeight30:30px;
+$lh24:24px;
+$lh30:30px;
+$lh40:40px;
 
 //mixin
+//边框
+@mixin border {
+    border: 1px solid $colorGray1;
+}
 //边框带圆角
 @mixin border-radius {
-    border:1px solid $colorGray3;
+    border:1px solid $colorGray1;
     border-radius: 3px;
 }
